--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "rollup": "^2.45.2"
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0"
   },
   "babel": {
     "presets": [
@@ -13,6 +13,7 @@
     ]
   },
   "dependencies": {
+    "@ionic/core": "^5.6.4",
     "ionicons": "^5.5.1"
   }
 }
