--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "babel-loader": "^8.2.2",
     "webpack": "^5.33.2",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "sass": "^1.32.11"
   },
   "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
-  },
-  "dependencies": {
-    "@ionic/core": "^5.6.4",
-    "ionicons": "^5.5.1"
+    "presets": ["@babel/preset-env"]
   }
 }
