--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
+  "name": "aqi.tw",
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "babel-loader": "^8.2.2",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "concurrently": "^6.1.0",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.32.11",
-    "webpack": "^5.33.2",
-    "webpack-cli": "^4.6.0"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
+    "svelte": "^3.38.2"
   }
 }
