start moving to svelte & typescript

--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-typescript": "^8.0.0",
+    "@svicons/ionicons-outline": "0.1.3",
+    "@tsconfig/svelte": "^1.0.0",
     "concurrently": "^6.1.0",
+    "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.32.11",
-    "svelte": "^3.38.2"
+    "svelte": "^3.38.2",
+    "svelte-check": "^1.0.0",
+    "svelte-preprocess": "^4.0.0",
+    "tslib": "^2.0.0",
+    "typescript": "^4.0.0"
   }
 }
