--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "concurrently": "^6.1.0",
     "sass": "^1.32.11",
     "webpack": "^5.33.2",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "babel": {
     "presets": [
