--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     ]
   },
   "dependencies": {
+    "@capacitor/android": "^3.1.1",
+    "@capacitor/cli": "^3.1.1",
+    "@capacitor/core": "^3.1.1",
     "feather-icons": "^4.28.0"
   }
 }
