--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@babel/preset-env": "^7.13.15",
     "babel-loader": "^8.2.2",
     "concurrently": "^6.1.0",
+    "cordova-res": "^0.15.3",
     "sass": "^1.32.11",
     "webpack": "^5.33.2",
     "webpack-cli": "^4.6.0",
