--- a/package.json
+++ b/package.json
@@ -1,12 +1,6 @@
 {
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "babel-loader": "^8.2.2",
     "concurrently": "^6.1.0",
-    "sass": "^1.32.11",
-    "webpack": "^5.33.2",
-    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
   "babel": {
@@ -15,6 +9,12 @@
     ]
   },
   "dependencies": {
-    "feather-icons": "^4.28.0"
+    "feather-icons": "^4.28.0",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "babel-loader": "^8.2.2",
+    "sass": "^1.32.11",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0"
   }
 }
