--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
 {
-  "devDependencies": {
-    "concurrently": "^6.1.0",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
-  },
   "dependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@vitejs/plugin-legacy": "^3.0.2",
     "feather-icons": "^4.28.0",
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "babel-loader": "^8.2.2",
     "sass": "^1.32.11",
-    "webpack": "^5.33.2",
-    "webpack-cli": "^4.6.0"
+    "terser": "^5.16.1",
+    "vite": "^4.0.4"
   }
 }
